removeed useless array

--- a/Objects/AT89S52_7segClock.build_log.htm
+++ b/Objects/AT89S52_7segClock.build_log.htm
@@ -18,16 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-E:\Code\Embedded\Keil\AT89S52_7segClock\AT89S52_7segClock.uvproj
+E:\Code\Embedded\Keil\8bit_7segClock\8bit_7segClock\AT89S52_7segClock.uvproj
 Project File Date:  03/02/2024
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling port.c...
 linking...
-Program Size: data=42.1 xdata=0 code=821
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?_READPINP1?PORT
+Program Size: data=36.1 xdata=0 code=795
 creating hex file from ".\Objects\AT89S52_7segClock"...
-".\Objects\AT89S52_7segClock" - 0 Error(s), 0 Warning(s).
+".\Objects\AT89S52_7segClock" - 0 Error(s), 1 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
